<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edurooms"
        style="@style/TextHeading1"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contraseña"
        style="@style/TextHeading2"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contraseña_instrucciones"
        style="@style/TextBody"
        android:layout_marginBottom="20dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/CustomEditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/enviar_instrucciones"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_login"
        style="@style/TextCaption"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

</LinearLayout>