<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edurooms"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/verAulasButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ver_aulas_disponibles"
        android:textSize="16sp"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/misReservasButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/mis_reservas"
        android:textSize="16sp"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/incidenciasButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/reportar_incidencia"
        android:textSize="16sp"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/cerrarSesionButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/cerrar_sesi_n"
        android:textSize="16sp"
        android:backgroundTint="#FF6B6B" />

</LinearLayout>