<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <!-- Toolbar -->
    <include layout="@layout/toolbar" />

    <!-- ScrollView con formulario -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueva_aula"
                style="@style/TextHeading1"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/nombreInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/CustomEditText"
                android:hint="@string/nombre_del_aula"
                android:inputType="text"
                android:autofillHints="name"
                android:layout_marginBottom="15dp" />

            <EditText
                android:id="@+id/capacidadInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/CustomEditText"
                android:hint="@string/capacidad"
                android:inputType="number"
                android:autofillHints="none"
                android:layout_marginBottom="15dp" />

            <EditText
                android:id="@+id/ubicacionInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/CustomEditText"
                android:hint="@string/ubicaci_n"
                android:inputType="text"
                android:autofillHints="none"
                android:layout_marginBottom="15dp" />

            <EditText
                android:id="@+id/codigoQRInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/CustomEditText"
                android:hint="@string/c_digo_qr"
                android:inputType="text"
                android:autofillHints="none"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/crearButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/ButtonMainMenu"
                android:text="@string/crear_aula"
                />

        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <include layout="@layout/layout_bottom_nav" />

</LinearLayout>