<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_del_aula"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/nombreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/capacidadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/ubicacionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/estadoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/reservarButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/reservar_aula"
        android:textSize="16sp"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/incidenciaButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/reportar_incidencia"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incidencias_activas"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <ListView
        android:id="@+id/incidenciasListView"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

</LinearLayout>